<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/recommend_padding_screen">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/event_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/choose_schedule_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_title_container"
        android:layout_marginTop="16dp"
        android:text="@string/choose_schedule_date"/>

    <TextView
        android:id="@+id/choose_schedule_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_schedule_date"
        android:layout_marginTop="16dp"
        android:text="@string/choose_schedule_time"/>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SAVE"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>