<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hdgregory.resumeapp.MainActivity">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/textView3"
        />

    <Button
        android:id="@+id/open_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_marginTop="60dp"
        />

    <Button
        android:id="@+id/open_tool_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tool"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView3"
        />

    <Button
        android:id="@+id/open_trip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/open_tool_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/trip"
        />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:padding="16dp"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scheduleRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/schedule_item_layout"
        android:paddingLeft="@dimen/recommend_padding_screen"
        android:paddingRight="@dimen/recommend_padding_screen"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/open_trip_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.myapp.MainActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
